# MAVS-Ch10C

./: .gitattributes  .gitignore  Path.md  README.md  WorkPlan.md  pyproject.toml
scripts/: build_corruption_reproducibility_corpus.py  build_corruption_reproducibility_report.py  build_corruption_reproducibility_tables.py  build_corruption_stability_figures.py  build_repetition_grid.py  build_reproducibility_manifest.py  build_reproducibility_metrics.py  build_reproducibility_report.py  build_stability_figures.py  build_stability_tables.py  build_variance_benchmark_dataset.py  build_variance_tables.py  hash_artifacts.py  import_foundation.py  reproduce_all.py  run_audit_repetition_corpus.py  run_locked_repetition_corpus.py  verify_artifacts.py
tests/: phase6_helpers.py  test_accuracy_variance_definition.py  test_all_runs_recorded.py  test_artifact_inventory_complete.py  test_audit_seed_independence.py  test_benchmark_split_independence.py  test_calibration_split_isolation.py  test_ch10a_import_contract.py  test_ch10b_verification_contract.py  test_confidence_interval_width_definition.py  test_consensus_stability_definition.py  test_corpus_manifest_schema.py  test_corruption_clean_anchor_matches_phase5.py  test_corruption_inputs_identical_across_systems.py  test_corruption_matrix_complete.py  test_corruption_metrics_complete.py  test_corruption_no_tuning_guard.py  test_corruption_report_claims_reference_artifacts.py  test_corruption_suite_import_contract.py  test_corruption_trace_stability_complete.py  test_decision_stability_definition.py  test_end_to_end_smoke.py  (+27 more)
(+98 files in other folders)
