[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mavs-ch10c"
version = "0.1.0"
description = "MAVS Chapter 10C reproducibility benchmark infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "MAVS-RESEARCH" }
]
dependencies = [
  "joblib>=1.3",
  "numpy>=1.26",
  "pandas>=2.0",
  "PyYAML>=6.0",
  "scikit-learn>=1.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8"
]

[project.scripts]
mavs-ch10c = "mavs_ch10c.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
